Added a button to make your own text.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <title>Document</title>
 </head>
 <body>
-
+  <form id="form">
+    Text: <input type="text" id="phrase"><br>
+    "char" or "word": <input type="text" id="grouping"><br>
+    <button type="button" name="button">Submit</button>
+  </form>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js" charset="utf-8"></script>
